--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -3,27 +3,44 @@
 {% block title %}Liste des livres{% endblock %}
 
 {% block body %}
-<h1 class="text-center">Liste des livres</h1>    
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Titre</th>
-                <th>Nb de pages</th>
-                <th>Auteur</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for book in books %}
-                <tr>
-                    <td><a href="/book/{{ book.id }}">{{ book.title }}</a></td>
-                    <td>{{ book.nbOfPages }}</td>
-                    <td>{{ book.author.firstname }} {{ book.author.lastname }}</td>
-                </tr>
-            {% endfor %}
-        </tbody>
+<header class="container">
+    <div class="row">
+        <h1 class="text-center">Liste des livres</h1>    
+    </div>
+</header>
 
+<nav class="container-fluid">
+    <div class="row">
         <p><a href="/refreshColors">Effacer les couleurs moches</a></p>
-        <p><a href="/books/add">Ajouter un nouveau livre</a></p>
-    </table>
+        <p><a href="{{path('app_book_add')}}">Ajouter un nouveau livre</a></p>
+    </div>
+</nav>
+
+<main class="container">
+    <div class="row">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Titre</th>
+                    <th>Nb de pages</th>
+                    <th>Auteur</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for book in books %}
+                    <tr>
+                        <td><a href="/book/{{ book.id }}">{{ book.title }}</a></td>
+                        <td>{{ book.nbOfPages }}</td>
+                        <td>{{ book.author.firstname }} {{ book.author.lastname }}</td>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</main>
+
+
+
+    
 {% endblock %}
