--- a/templates/book/add.html.twig
+++ b/templates/book/add.html.twig
@@ -4,8 +4,11 @@
 {% block title %}Création de Livre{% endblock %}
 
 {% block body %}
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Envoyer">
-    {{ form_end(form) }}
+    <main class="container">
+        <h1 class="text-center p-3">Nouveau livre</h1>
+        {{ form_start(form) }}
+            {{ form_widget(form) }}
+            <input type="submit" value="Envoyer">
+        {{ form_end(form) }}
+    </main>
 {% endblock %}
