--- a/templates/book/details.html.twig
+++ b/templates/book/details.html.twig
@@ -28,6 +28,27 @@
             <li>Auteur : {{ book.author.firstname }} {{ book.author.lastname }}</li>
         </ul>
 
+
+        {% if movie is not empty %}
+        
+            <hr class="m-5">
+
+            <h2>Film : {{ movie.Title }}</h2>
+            <div class="row">
+                <img class="col-4 img-fluid" src="{{ movie.Poster }}">
+                <div class="col-8">
+                    <ul>
+                        <li>Titre : {{ movie.Title }}</li>
+                        <li>Année : {{ movie.Year }}</li>
+                        <li>Réalisateur : {{ movie.Director }}</li>
+                    </ul>
+                </div>
+            </div>
+
+        {% endif %}
+
+        <hr class="m-5">
+
         <table class="table">
             <thead>
                 <tr>
