Add a borrowing system

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,5 +15,7 @@
     </head>
     <body>
         {% block body %}{% endblock %}
+
+        {% include "partials/_borrowed_books.html.twig" %}
     </body>
 </html>
