--- a/templates/book/details.html.twig
+++ b/templates/book/details.html.twig
@@ -8,10 +8,16 @@
             <h1 class="text-center mb-5">{{ book.title }}</h1>
         </div>
 
+        <input type="hidden" id="bookId" value="{{ book.id }}">
+
         <div class="row">
             <h2 class="col-2">Description : </h2>
             <button class="btn btn-primary col-2" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
                 Voir description
+            </button>
+
+            <button class="btn btn-warning col-2" type="button" id="borrow_btn">
+                Emprunter
             </button>
             
 
